<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">KeyGo</string>

    <string name="selected_items">%d selected</string>

    <string name="passphrase">Passphrase</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="credit_card">Credit Card</string>
    <string name="credit_card_number">Credit Card number</string>
    <string name="credit_card_number_required">Credit Card number*</string>
    <string name="credit_card_holder">Credit Card holder</string>
    <string name="expiration_date">Expiration date</string>
    <string name="expiration_date_placeholder">MM/YY</string>
    <string name="cvv" translatable="false">CVV</string>

    <string name="authenticate">Authenticate</string>

    <string name="time_for_reauthentication">Re-authentication</string>
    <string name="time_disabled">Never force re-authentication</string>
    <string name="time_every_time">Require re-authentication each time</string>

    <plurals name="time_x_minute">
        <item quantity="one">Force a new authentication after %d minute</item>
        <item quantity="other">Force a new authentication after %d minutes</item>
    </plurals>

    <string name="enable_fingerprint_authentication">Enable fingerprint authentication</string>
    <string name="authentication_title">Authentication</string>
    <string name="authentication_description">Hold your finger against the fingerprint sensor.</string>
    <string name="use_password">Use password</string>
    <string name="no_elements_to_show">There are no elements</string>
    <string name="no_element_selected">No element selected</string>
    <string name="add_element">Add element</string>

    <string name="password_incorrect">Incorrect password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="is_not_filled_in">This must be filled in</string>
    <string name="invalid_card">Invalid card number</string>
    <string name="invalid_date">Invalid date</string>
    <string name="invalid_url">Invalid url</string>

    <string name="set_up_main_password">Set up main password</string>
    <string name="first_steps">First Steps</string>
    <string name="set_main_password_info">Set a main password</string>
    <string name="update_main_password_info">Update your main password</string>

    <string name="edit">Edit</string>
    <string name="text_continue">Continue</string>

    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="about">About</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="permanently_delete">Permanently delete?</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="successful_deleted">Successful deleted</string>

    <string name="copied_data">Data copied</string>

    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="build">Build</string>

    <string name="strength">Strength</string>
    <string name="ridiculous">Ridiculous</string>
    <string name="weak">Weak</string>
    <string name="moderate">Moderate</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>

    <string name="loading">Loading</string>

    <string name="general_information">General information</string>
    <string name="additional_information">Additional information</string>
    <string name="password_information">Password information</string>
    <string name="credit_card_information">Credit card information</string>

    <string name="note">Note</string>

    <string name="star_required">*required</string>

    <string name="options">Options</string>

    <string name="enable">Enable</string>

    <string name="title">Title</string>
    <string name="generate">Generate</string>

    <string name="username">Username</string>
    <string name="origin">Origin</string>

    <string name="no_value_set">No value set</string>

    <string name="more">More</string>

    <string name="content_description_more">Show more</string>
    <string name="content_description_image">Image</string>
    <string name="content_description_add_password">Add password button</string>

    <string name="third_party_dependencies">Third-Party Dependencies</string>

    <string name="regenerate">Regenerate</string>

    <string name="use_digits">Use digits</string>
    <string name="use_uppercase_letters">Use uppercase letters</string>
    <string name="use_lowercase_letters">Use lowercase letters</string>
    <string name="use_punctuations">Use punctuations</string>

    <string name="length_param">Length %1$d</string>
    <string name="change_param">Change The %1$s</string>
    <string name="type">Type</string>

    <string name="nfc_listening">You can hold an NFC-enabled card to your phone</string>
    <string name="nfc_moved_too_fast">Do not move your card so fast</string>
    <string name="nfc_unknown_card">Your card is unknown</string>
    <string name="nfc_locked">NFC is locked on this card</string>
    <string name="nfc_enable">Enable NFC on your device</string>
    <string name="nfc_success">Card details scanned successfully</string>

    <string name="developer">Developer</string>
    <string name="developer_name" translatable="false">OffRange</string>

    <string name="features">Features</string>
    <string name="autofill_service">Autofill Service</string>
    <string name="autofill_summary">Enables automatic filling of sensitive data for convenience and security.</string>

    <string name="path_password_eye" translatable="false" tools:override="true">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through" translatable="false" tools:override="true">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible" translatable="false" tools:override="true">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through" translatable="false" tools:override="true">M3.27,4.27 L19.74,20.74</string>
    <string name="no_results_found">No results found</string>
    <string name="nfc_information">NFC information</string>
    <string name="report">Report an issue</string>
    <string name="report_summary">Report a bug or request a feature on GitHub</string>

    <string name="filter">Filter</string>
    <string name="filter_msg">Choose what to display</string>

    <string name="highlights">Highlights</string>
    <string name="favorites">Favorites</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="remove_from_favorite">Remove from favorites</string>
    <string name="last_viewed">Last viewed</string>
    <string name="last_added">Last added</string>

    <string name="stable">Stable</string>
    <string name="rc">RC</string>
    <string name="beta">Beta</string>
    <string name="alpha">Alpha</string>
    <array name="update_channels" translatable="false">
        <item>@string/stable</item>
        <item>@string/rc</item>
        <item>@string/beta</item>
        <item>@string/alpha</item>
    </array>

    <string name="version">Version</string>

    <string name="error_title">Error occurred</string>

    <string name="warning">Attention!</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Export or Import a backup</string>
    <string name="import_str">Import</string>
    <string name="export">Export</string>
    <string name="csv_file">CSV File</string>
    <string name="kdbx_file">KDBX File</string>
    <string name="use_kdbx">Use KDBX format</string>
    <string name="kdbx_summary_import">Import elements using a encrypted .kdbx file</string>
    <string name="kdbx_summary_export">Export elements using a .kdbx file. Elements exported using this option will be securely encrypted with a password</string>

    <string name="csv_summary_import">Import passwords from your browser. Search for <b>Passwordmanager</b> in your browser\'s <b>Settings</b> and export your passwords as a csv file.</string>
    <string name="csv_summary_export">Export passwords in a csv format to import them in your browser\'s password manager</string>
    <string name="csv_export_warning">Please note that this export process does not provide encryption, and if unauthorized third parties gain access to this file, they will have visibility into your passwords. Furthermore, please be aware that this option allows the export of passwords exclusively.\n\n<b>It is recommended to choose the KDBX file format!</b></string>
    <string name="csv_row_number_error">CSV file must have 5 rows.</string>
    <string name="backup_restored">Backup successfully restored</string>
    <string name="backup_stored">Backup successfully stored</string>
    <plurals name="item_existed">
        <item quantity="one">%d item was skipped as it already existed</item>
        <item quantity="other">%d items were skipped as they already existed</item>
    </plurals>
    <string name="invalid_file_length">Invalid file length</string>
    <string name="invalid_file">Invalid file</string>

    <string name="wait_text">This might take a little time. Please be patient</string>
    <string name="authenticate_to_import">To load \"%s\", authentication is required</string>
    <string name="authenticate_to_proceed">Authenticate to proceed</string>
    <string name="enter_password_for_s">Enter password for \"%s\"</string>

    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="tag_view">Tag Layout</string>
    <string name="tag_view_on">Dashboard grouped by tags</string>
    <string name="tag_view_off">Dashboard in list format</string>

    <string name="add_tags">Add tags here</string>
    <string name="edit_tag">Edit tag</string>
    <string name="merge_tag">Merge tags</string>
    <string name="tag_already_existed">This tag already exists</string>
    <string name="tag_cant_be_blank">Tags can\'t be blank</string>
    <string name="prefix_not_allowed">This prefix is reserved and can\'t be used</string>
    <string name="all">All</string>
    <string name="items_n">Items: %d</string>

</resources>