<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:useDefaultMargins="true">

        <de.davis.passwordmanager.ui.views.InformationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentEnabled="false"
            app:title="@string/general_information"
            app:print_required="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:startIconDrawable="@drawable/ic_baseline_edit_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

        </de.davis.passwordmanager.ui.views.InformationView>

        <de.davis.passwordmanager.ui.views.InformationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentEnabled="false"
            app:title="@string/password_information"
            app:print_required="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"/>

                <de.davis.passwordmanager.ui.views.PasswordStrengthBar
                    android:id="@+id/strengthBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/generate" />

        </de.davis.passwordmanager.ui.views.InformationView>

        <de.davis.passwordmanager.ui.views.InformationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentEnabled="false"
            app:title="@string/user_information">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/origin"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

        </de.davis.passwordmanager.ui.views.InformationView>

    </GridLayout>
</ScrollView>