<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="@dimen/default_margin"
        android:text="@string/edit"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="@dimen/default_margin"
        android:text="@string/mark_as_favorite"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/baseline_star_outline_24" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favorite"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="@dimen/default_margin"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        app:drawableTint="@android:color/holo_red_dark"
        app:drawableStartCompat="@drawable/ic_baseline_delete_24" />

</RelativeLayout>